--- a/launcher_config.json
+++ b/launcher_config.json
@@ -1,5 +1,5 @@
 {
-	"clientVersion": "13.40.1",
+	"clientVersion": "cliente-0.1",
 	"launcherVersion": "1.0",
 	"replaceFolders": true,
 	"replaceFolderName": [
@@ -14,6 +14,6 @@
 		}
 	],
 	"clientFolder": "",
-	"newClientUrl" : "https://github.com/Ravenaot/ravenaclient/releases/download/13.32.14520/Client.zip",
+	"newClientUrl": "https://github.com/Ravenaot/ravenaclient/releases/download/1.0.0/Client.zip",
 	"clientExecutable": "client.exe"
 }
