--- a/launcher_config.json
+++ b/launcher_config.json
@@ -1,5 +1,5 @@
 {
-	"clientVersion": "cliente-0.4",
+	"clientVersion": "cliente-0.5",
 	"launcherVersion": "1.0",
 	"replaceFolders": true,
 	"replaceFolderName": [
@@ -11,6 +11,9 @@
 		},
 		{
 			"name": "bin"
+		},
+		{
+			"screenshots"
 		}
 	],
 	"clientFolder": "",
