--- a/launcher_config.json
+++ b/launcher_config.json
@@ -1,5 +1,5 @@
 {
-	"clientVersion": "cliente-0.7",
+	"clientVersion": "cliente-0.8",
 	"launcherVersion": "1.0",
 	"replaceFolders": true,
 	"replaceFolderName": [
@@ -10,7 +10,7 @@
 			"name": "storeimages"
 		},
 		{
-			"name": "bin"
+			"name": "sounds"
 		},
 		{
 			"name": "screenshots"
